--- a/TensorFlow_basics.ipynb
+++ b/TensorFlow_basics.ipynb
@@ -278,6 +278,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1st example Graph\n",
+    "\n",
+    "n1 = tf.constant(1)\n",
+    "n2 = tf.constant(2)\n",
+    "n3 = n1 + n2\n",
+    "#or\n",
+    "n3 = tf.add(n1,n2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    result = sess.run(n3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tensorflow.python.framework.ops.Graph object at 0x00000263444524A8>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Default Graphs of Tensorflow\n",
+    "print (tf.get_default_graph())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variables and placeholders in Tensorflow\n",
+    "sess = tf.InteractiveSession()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_tensor = tf.random_uniform((4,4),0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_variable = tf.Variable(my_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(4, 4) dtype=float32_ref>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sess.run(my_variable) This will show error because Global Variable of Graphs are still not initialized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.15037894, 0.9130602 , 0.49437535, 0.19750929],\n",
+       "       [0.6988423 , 0.01390958, 0.668345  , 0.514884  ],\n",
+       "       [0.9415567 , 0.10943639, 0.2520696 , 0.5749818 ],\n",
+       "       [0.66100454, 0.693912  , 0.7521236 , 0.9424995 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(my_variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# placeholder\n",
+    "ph = tf.placeholder(tf.float32, shape = (None,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
