--- a/TensorFlow_basics.ipynb
+++ b/TensorFlow_basics.ipynb
@@ -443,6 +443,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Making of First Tensorflow Simple Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand_a = np.random.uniform(0,100,(5,5))\n",
+    "rand_b = np.random.uniform(0,100,(5,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tf.placeholder(tf.float32)\n",
+    "b = tf.placeholder(tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_op = tf.add(a,b)\n",
+    "mult_op = a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    add_result = sess.run(add_op, feed_dict={a:10, b:20})\n",
+    "    mult_result = sess.run(mult_op, feed_dict={a:rand_a, b:rand_b})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n",
+      "[[ 364.6208   334.9059   177.92958  335.43597   59.87462]\n",
+      " [2023.3163  4870.311   2204.0786  3153.4915  3700.512  ]\n",
+      " [6088.478   5105.6265  7121.8916  4606.3423  1565.3501 ]\n",
+      " [1399.7186  1133.3099   448.78308 1519.0154  1272.0394 ]\n",
+      " [1871.0707  1205.1459  7487.9673  6831.2803  1421.5204 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(add_result)\n",
+    "print(mult_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Making a Second Neural Network Graph with many actual features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_features = 10\n",
+    "n_neurons = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32,shape = (None, n_features))\n",
+    "m = tf.Variable(initial_value=tf.random_normal(shape=(n_features,n_neurons)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = tf.Variable(tf.ones(shape=(n_neurons)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = tf.matmul(x,m)\n",
+    "y = tf.add(z,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = tf.sigmoid(y)\n",
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    result = sess.run(output, feed_dict={x:np.random.random([1,n_features])})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.8904305  0.7165903  0.94449437 0.98127913]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
